Update and rename NuroVu0.34.1.java to NuroVu0.35.java